# gifsicle

./: .gitignore  CMakeLists.txt  README.md  build.sh  pre.js
autom4te.cache/: output.1  requests  traces.0  traces.1
cmake/: Doctest.cmake
examples/: .gitignore  main.go
include/: config.h  gifsicle.h  progress.h  utility.h
include/lcdfgif/: gif.h
src/: CMakeLists.txt  bind.cpp  coptions.cpp  coptions.h  gifdiff.wasm  gifread.c  gifsicle.c  gifsicle.h  gifsicle.wasm  gifwrite.c  optimize.c  opttemplate.c  progress.cpp  progress.h  support.c  utility.cpp  utility.h  xform.c
src/app/: CMakeLists.txt  main.cpp
src/js/: CMakeLists.txt  bind.cpp
src/lib/: CMakeLists.txt  gifread.c  gifsicle.c  gifwrite.c  progress.cpp  support.c  utility.cpp
src/shared/: CMakeLists.txt  bind.cpp  gifsicle_gif.h
tests/: CMakeLists.txt  flatbufferstests.cpp
tests/gifs/: 01.flat  07.flat
